Bug 78885 - FILESAVE: File Crashes LO on Save at sw/source/core/layout/findfrm.cxx in IsCellFrm() with seg fault
Summary: FILESAVE: File Crashes LO on Save at sw/source/core/layout/findfrm.cxx in IsC...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Sourav
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-19 07:00 UTC by Rohit Deshmukh
Modified: 2019-08-08 12:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original file (1.68 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 07:00 UTC, Rohit Deshmukh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rohit Deshmukh 2014-05-19 07:00:11 UTC
Created attachment 99299 [details]
Original file

Problem description: 

Steps to reproduce:
1. Load the attached DOCX in LO
2. Save as NEW.DOCX
3. Open the NEW.DOCX in Word

Current behavior:
File gets crash while saving

Expected behavior:
File should get saved without error
              
Operating System: Ubuntu
Version: 4.3.0.0.alpha0+ Master
Comment 1 Jorendc 2014-05-20 17:30:11 UTC
I reproduce a crash while saving, tested using Version: 4.3.0.0.alpha1+
Build ID: cd11bc699ac50af4f560ed5f2e5e7903de0898b8
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-05-20_08:02:54
Comment 2 Commit Notification 2014-06-11 09:22:31 UTC
sushil_shinde committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63d1aa4dc8aa70256edb19638bcab3a6d5b1f3b6

fdo#78885 : File crashed while opening in LO



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.