fdo#78885 : File crashed while opening in LO

- File attached to issue contains footnote between a table and reference
    of footnote is in field.
  - In PopFieldContext code was throwing exception due to null value of
    footnotestartnode.

Reviewed on:
	https://gerrit.libreoffice.org/9697

Change-Id: I467e234a7daa6a5f724087c2cc959e4c9d76f4d2